--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>css exercise four</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -10,16 +11,20 @@
     <section class="container">
       <h1>Modern luxury <span class="emphasis">travel</span></h1>
       <div class="preview baku">
-        <h1>Baku</h1>
+        <h3>Baku</h3>
+        <img src="images/baku.jpg" class="pic" alt="baku">
       </div>
       <div class="preview london">
-        <h1>London</h1>
+        <h3>London</h3>
+        <img src="images/london.png" class="pic" alt="london">
       </div>
       <div class="preview madrid">
-        <h1>Madrid</h1>
+        <h3>Madrid</h3>
+        <img src="images/madrid.jpg" class="pic" alt="madrid">
       </div>
       <div class="preview rome">
-        <h1>Rome</h1>
+        <h3>Rome</h3>
+        <img src="images/rome.jpg" class="pic" alt="rome">
       </div>
     </section>
   </body>
